--- a/main.html
+++ b/main.html
@@ -6,6 +6,96 @@
     <title>Página Inicial</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="styles.css">
+    <style>
+        /* Estilo da barra lateral */
+        .sidebar {
+            background-color: #001F3F;
+            color: white;
+            height: 100vh;
+            padding: 20px;
+            box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
+        }
+
+        .sidebar h2 {
+            font-size: 24px;
+            font-weight: bold;
+            margin-bottom: 20px;
+        }
+
+        .sidebar ul {
+            list-style: none;
+            padding: 0;
+        }
+
+        .sidebar ul li {
+            margin: 15px 0;
+        }
+
+        .sidebar ul li a {
+            color: white;
+            text-decoration: none;
+            font-size: 18px;
+            padding: 8px;
+            display: block;
+            transition: background-color 0.3s;
+        }
+
+        .sidebar ul li a:hover {
+            background-color: #003399;
+        }
+
+        /* Estilo do conteúdo principal */
+        .main-content {
+            padding: 30px;
+            background-color: #f5f5f5;
+        }
+
+        /* Estilo para indicações de vídeos e materiais didáticos */
+        .recommendations {
+            display: grid;
+            grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+            gap: 20px;
+            margin-top: 20px;
+        }
+
+        .card {
+            border: 1px solid #ddd;
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            padding: 15px;
+            background-color: #fff;
+            transition: transform 0.3s;
+        }
+
+        .card:hover {
+            transform: translateY(-5px);
+        }
+
+        .card-title {
+            font-size: 20px;
+            color: #001F3F;
+            margin-bottom: 10px;
+        }
+
+        .card-text {
+            font-size: 16px;
+            color: #666;
+            margin-bottom: 15px;
+        }
+
+        .card button {
+            background-color: #001F3F;
+            color: white;
+            border: none;
+            padding: 10px 20px;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+
+        .card button:hover {
+            background-color: #003399;
+        }
+    </style>
 </head>
 <body>
     <div class="container-fluid">
@@ -26,25 +116,32 @@
                 <header class="header text-center">
                     <h1>Seja Bem-vindo!</h1>
                 </header>
-                <div class="slideshow-container">
-                    <div class="slide fade">
-                        <img src="news1.jpg" alt="Notícia 1">
-                        <div class="text">Notícia sobre Matemática 1</div>
+                
+                <!-- Seção de indicações de vídeos e materiais didáticos -->
+                <section class="recommendations">
+                    <div class="card">
+                        <h3 class="card-title">Vídeo sobre Frações</h3>
+                        <p class="card-text">Aprenda a resolver problemas com frações de forma simples e didática.</p>
+                        <button onclick="window.location.href='link_do_video_1'">Assistir</button>
                     </div>
-                    <div class="slide fade">
-                        <img src="news2.jpg" alt="Notícia 2">
-                        <div class="text">Notícia sobre Matemática 2</div>
+                    <div class="card">
+                        <h3 class="card-title">Material Didático de Matemática</h3>
+                        <p class="card-text">Baixe um PDF com exercícios e explicações sobre operações matemáticas.</p>
+                        <button onclick="window.location.href='link_do_pdf_1'">Baixar PDF</button>
                     </div>
-                    <div class="slide fade">
-                        <img src="news3.jpg" alt="Notícia 3">
-                        <div class="text">Notícia sobre Matemática 3</div>
+                    <div class="card">
+                        <h3 class="card-title">Aula de Geometria</h3>
+                        <p class="card-text">Vídeo explicativo sobre as principais formas geométricas e suas propriedades.</p>
+                        <button onclick="window.location.href='link_do_video_2'">Assistir</button>
                     </div>
-                    <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-                    <a class="next" onclick="plusSlides(1)">&#10095;</a>
-                </div>
+                    <div class="card">
+                        <h3 class="card-title">Exercícios de Álgebra</h3>
+                        <p class="card-text">Um conjunto de exercícios para praticar álgebra. Baixe agora e comece a resolver.</p>
+                        <button onclick="window.location.href='link_do_pdf_2'">Baixar PDF</button>
+                    </div>
+                </section>
             </main>
         </div>
     </div>
-    <script src="scripts.js"></script>
 </body>
 </html>
